corrected footer messes up my other parts of page desing by adding overflow: hidden to blog-posts class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -198,7 +198,9 @@ h5{
   background: white;
   color: black;
 }
-
+.blog-posts{
+  overflow: hidden;
+  
 p.card-text{
   border-top: 0;
   border-bottom: 0;
@@ -247,7 +249,7 @@ footer{
   /* z-index: -800000000000; */
 }
 footer .footer-stuff{
-  width: 88vw;
+  // width: 88vw;
 }
 footer a {
   color: white;
